apps/kubernetes/k3s/apps/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
spec:
  selector:
    app: romm
  ports:
    - name: http
      port: 8080
      targetPort: 8080
