apps/kubernetes/k3s/apps/romm/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: romm
  namespace: romm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`romm.hughboi.vip`)
      kind: Rule
      services:
        - name: romm
          port: 8080
  tls:
    secretName: hughboi-tls
